--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "crypto": "^1.0.1",
     "csurf": "^1.11.0",
     "express": "^4.17.1",
+    "express-sanitizer": "^1.0.5",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
     "mongoose": "^5.10.14",
